applications/demo-app/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app
  labels:
    app: demo-app
spec:
  type: ClusterIP
  selector:
    app: demo-app
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
