applications/demo-app/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    cert-manager.io/acme-challenge-type: dns01
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: "" # provided via kustomize overlays patches
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-app-frontend
                port:
                  number: 3000
  tls:
    - hosts: [] # provided via kustomize overlays patches
      secretName: demo-app-frontend-cert
